# AI-Dev-Kit

./: .gitignore  .vercelignore  LICENSE  Readme.md  file_loader_tool.py  git_remote_tool.py  mcp_security.py  mcp_security_test.py  mcp_server.py  mcp_server_test.py  project_structure_tool.py  pyproject.toml  requirements-mcp.txt  requirements.txt  token_encryption.py  tool_runner_ui.py
Dev_Planning/: ROADMAP.md  verify_import_manifest.py  verify_import_manifest_test.py  verify_p0_smoke.py
webapp/: app.py  smoke_test.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/static/py/: runner.py
webapp/templates/: index.html
